@@ -72,7 +72,7 @@ public class PreAnalyzedFieldTest extends SolrTestCaseJ4 {
   
   @BeforeClass
   public static void beforeClass() throws Exception {
-    initCore("solrconfig.xml","schema.xml");
+    initCore("solrconfig-minimal.xml","schema-preanalyzed.xml");
   }
 
   @Override
@@ -100,6 +100,12 @@ public class PreAnalyzedFieldTest extends SolrTestCaseJ4 {
         fail("Should pass: '" + s + "', exception: " + e);
       }
     }
+  }
+
+  @Test
+  public void testValidSimple2() {
+    assertU(adoc("id", "1",
+                 "pre", "{\"v\":\"1\",\"str\":\"document one\",\"tokens\":[{\"t\":\"one\"},{\"t\":\"two\"},{\"t\":\"three\",\"i\":100}]}"));
   }
   
   @Test
